-fix gap between carousell and form field -fix carousel that was not adaptive

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,15 +1,24 @@
 .carousel-wrapper {
   display: flex;
+  max-width: 50%;
+  height: fit-content;
   flex-direction: column;
 }
 
 /* Styles for the currently displayed image */
 .curr-img {
-  display: flex;
+  display: grid;
+  grid-template-areas:  "    .         .           .    "
+                        "arrowLeft imgCurrent arrowRight"
+                        "    .         .           .    ";
+  grid-template-rows: 0% 100% 0%;
+  grid-template-columns: 10% 80% 10%;
+  
   align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 .curr-img img {
-  width: 100%;
   height: auto;
 }
 /* Fixed 'prev' and 'next' buttons on the sides of the carousel */
@@ -19,25 +28,29 @@
   background-color: #dcdada;
   color: white;
   font-weight: bold;
-  font-size: 4em; /* Reduced size for the buttons */
-  padding: 8px; /* Reduced padding for the buttons */
-  user-select: none; /* Avoids text selection on hover */
+  font-size: 1em;
+  padding: 8px;
+  user-select: none;
   top: 50%;
   padding: 10px;
   transform: translateY(-50%);
   transition: 0.6s ease;
-  z-index: 10; /* Ensure the arrows are above other elements */
+  z-index: 10;
+  grid-area: arrowRight;
+  grid-row: 2;
+  grid-column: 3;
 }
 
 .prev {
-  left: 0;
   margin-right: 4px;
   margin-left: 3px;
   border-radius: 18px 0 0 18px;
+  grid-area: arrowLeft;
+  grid-row: 2;
+  grid-column: 1;
 }
 
 .next {
-  right: 0;
   margin-left: 4px;
   margin-right: 3px;
   border-radius: 0 18px 18px 0;
@@ -53,8 +66,30 @@
   width: 100% !important; /* Width at 100% of .curr-img */
 }
 
+.transform-component-module_wrapper__SPB86{
+  grid-area: imgCurrent;
+  grid-row: 2;
+  grid-column: 2;
+  display: inline;
+  aspect-ratio: 1 / 1;
+}
+react-transform-wrapper{
+  height: 100% !important;
+  width: 100% !important;
+}
+.transform-component-module_content__FBWxo{
+  display: relative;
+  height: 100% !important;
+  width: 100% !important;
+  object-fit: contain;
+  object-position: center;
+  border-radius: 10px;
+  transition: 0.6s ease;
+}
+
 .carousel-wrapper .react-transform-wrapper img {
-  width: inherit;
+  width: 100%;
+  height: 100%;  object-fit: contain;
 }
 
 /* Styles for the image container with thumbnails */
@@ -64,6 +99,8 @@
   gap: 10px;
   overflow-y: hidden;
   overflow-x: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 /* Styles for individual carousel thumbnails */
