--- a/src/Components/DragDropFileInput/DragDropFileInput.css
+++ b/src/Components/DragDropFileInput/DragDropFileInput.css
@@ -42,7 +42,6 @@
 }
 
 .drag-drop-inner {
-  position: relative;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -107,6 +106,7 @@ input[type="file"] {
 }
 
 .camera-container {
+  display: none;
   flex-direction: column;
   align-items: center;
 }
