--- a/src/Pages/FormPage/FormPage.css
+++ b/src/Pages/FormPage/FormPage.css
@@ -1,57 +1,57 @@
+/*The form section of the form page*/
 .formPage-container {
   display: grid;
-  justify-content: space-between;
   padding: 0 10px;
-  grid-template-columns: "1fr auto";
-  grid-gap: 1rem;
+  grid-gap: 3rem;
 }
 
+/*for deactivating the scroll of the page*/
 .disable-scroll {
   overflow: -moz-hidden-unscrollable;
   padding: 100 10px !important;
-  grid-template-columns: 1fr auto; /* Use correct grid column definition */
+  grid-template-columns: 1fr auto;
   grid-gap: 1rem;
   align-items: start;
 }
 
-@media only screen and (min-width: 1231px) {
+@media only screen and (min-width: 1230px) {
   .formPage-container {
     grid-template-areas: "pics data progress-bar";
-    grid-template-columns: 43% 50% 7%; /* Allocates space for progress bar next to the form */
+    grid-template-columns: 40% 50% 10%;
+    justify-items: center;
   }
-  .pic-container {
-    position: fixed;
+  .carousel-wrapper{
+    grid-area: pics;
+    left:10%;
+    margin-top: 40%;
+    max-width: 80%!important;
+  
   }
+    
 }
 
 @media only screen and (max-width: 1230px) {
   .formPage-container {
-    grid-template-columns: 4fr 0fr;
+    grid-template-rows: 10% 80%;
     grid-template-areas:
-      "pics test"
-      "data progress-bar"; /* This line places progress-bar next to data if space allows */
-    justify-content: normal;
-    justify-items: stretch;
+      "pics"
+      "data";
     justify-items: center;
   }
-  .progress-wrapper {
-    justify-self: start; /* Align the progress-bar to the right */
-  }
-}
 
-.pic-container {
-  display: block;
-  margin: 30px 35px;
-  width: 94%;
-  transform: scale(0.45) translate(-66%, -62%);
-  transition: 0.6s ease;
+  .curr-img:not(.data-container){
+    margin-top: 10%;
+  }
 }
 
 @media only screen and (min-width: 1250px) {
   .carousel-wrapper {
     width: 100%;
     height: auto !important;
-    transition: 0.6s ease;
+  }
+  .carousel-wrapper{
+    width: 100%;
+    height: auto !important;
   }
   .curr-img img {
     width: calc(100%) !important;
@@ -61,7 +61,6 @@
 
 .progress-wrapper {
   grid-area: progress-bar;
-  /* Position is not fixed; it will move with the grid layout */
 }
 
 /* Text box container styles */
@@ -169,9 +168,9 @@ textarea {
   margin-left: 20px;
 }
 
-
+/*State when an input has not been confirm before submit*/
 .input-error {
-  border: 2px solid red; /* Outlines the element with a red border */
+  border: 2px solid red;
 }
 
 .loader-container-form.active {
